--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p class="card-text text-center">OYCZ presents its 2024 eyewear collection. Explore new style elements including an assortment of ‘jelly’ details, sleek wrap-around silhouettes, and an expanded spectrum of colorways that enhance OYCZ innovative design identity. Provoke your imagination through the iconic aesthetics of the 2024 collection.</p>
           </p>
           <div class="d-grid gap-2 col-6 mx-auto">
-            <a href="/Shop" class="btn btn-secondary ">View More</a>
+            <a href="shop.html" class="btn btn-secondary ">View More</a>
           </div>
         </div>
 
