--- a/shop.html
+++ b/shop.html
@@ -15,13 +15,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/shop.html">Shop</a>
+                <a class="nav-link active" href="shop.html">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/contact us.html">Contact Us</a>
+                <a class="nav-link" href="contact us.html">Contact Us</a>
               </li>
             </ul>
           </div>
